make the divider responsive  in why choose us part

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                             Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
                     <div
-                        class="choose-us-content grid lg:grid-cols-3 md:grid-cols-3 grid-cols-1 mt-10 gap-5 px-10 lg:px-0">
+                        class="choose-us-content grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-10 gap-5 px-10 lg:px-0">
                         <div class="choose-content-left flex flex-col gap-9 order-2 lg:order-1">
                             <div
                                 class="single-item flex flex-col md:flex-row text-center md:text-left justify-center items-center gap-5">
@@ -587,9 +587,10 @@
                                     <img src="./images/icon1.png" alt="icon">
                                 </div>
                                 <div>
-                                    <h3 class="text-[#121212] font-bold text-base lg:text-2xl">Dedicated Team</h3>
+                                    <h3 class="text-[#121212] font-bold text-[20px] lg:text-2xl">Dedicated Team</h3>
                                     <div class="divider mx-auto md:m-0 w-24"></div>
-                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                    <p class="font-medium text-[14px] md:text-base text-[#121212] opacity-60">
+                                        Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
                                         fruits.</p>
@@ -602,9 +603,10 @@
                                     <img src="./images/icon2.png" alt="icon">
                                 </div>
                                 <div>
-                                    <h3 class="text-[#121212] font-bold text-2xl">Fresh is Best</h3>
+                                    <h3 class="text-[#121212] font-bold text-[20px] lg:text-2xl">Fresh is Best</h3>
                                     <div class="divider mx-auto md:m-0 w-24"></div>
-                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                    <p class="font-medium text-[14px] md:text-base text-[#121212] opacity-60">
+                                        Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
                                         fruits.</p>
@@ -617,9 +619,10 @@
                                     <img src="./images/icon3.png" alt="icon">
                                 </div>
                                 <div>
-                                    <h3 class="text-[#121212] font-bold text-2xl">Gift Certificates</h3>
+                                    <h3 class="text-[#121212] font-bold text-[20px] lg:text-2xl">Gift Certificates</h3>
                                     <div class="divider mx-auto md:m-0 w-24"></div>
-                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                    <p class="font-medium text-[14px] md:text-base text-[#121212] opacity-60">
+                                        Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
                                         fruits.</p>
@@ -635,9 +638,11 @@
                             <div
                                 class="single-item flex flex-col md:flex-row text-center md:text-end justify-center items-center gap-5">
                                 <div class="order-2 md:order-1">
-                                    <h3 class="text-[#121212] font-bold text-2xl">Integrated Supplier</h3>
-                                    <div class="divider ml-[calc(50%-48px)] lg:ml-auto my-0 w-24"></div>
-                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                    <h3 class="text-[#121212] font-bold text-[20px] lg:text-2xl">Integrated Supplier
+                                    </h3>
+                                    <div class="divider ml-[calc(50%-48px)] md:ml-[50%] lg:ml-auto my-0 w-24"></div>
+                                    <p class="font-medium text-[14px] md:text-base text-[#121212] opacity-60">
+                                        Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
                                         fruits.</p>
@@ -650,9 +655,11 @@
                             <div
                                 class="single-item flex flex-col md:flex-row text-center md:text-end justify-center items-center gap-5">
                                 <div class="order-2 md:order-1">
-                                    <h3 class="text-[#121212] font-bold text-2xl">Sustainable Practice</h3>
-                                    <div class="divider ml-[calc(50%-48px)] lg:ml-auto my-0 w-24"></div>
-                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                    <h3 class="text-[#121212] font-bold text-[20px] lg:text-2xl">Sustainable Practice
+                                    </h3>
+                                    <div class="divider ml-[calc(50%-48px)] md:ml-[50%] lg:ml-auto my-0 w-24"></div>
+                                    <p class="font-medium text-[14px] md:text-base text-[#121212] opacity-60">
+                                        Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
                                         fruits.</p>
@@ -665,9 +672,10 @@
                             <div
                                 class="single-item flex flex-col md:flex-row text-center md:text-end justify-center items-center gap-5">
                                 <div class="order-2 md:order-1">
-                                    <h3 class="text-[#121212] font-bold text-2xl">The Benefits Only</h3>
-                                    <div class="divider ml-[calc(50%-48px)] lg:ml-auto my-0 w-24"></div>
-                                    <p class="font-medium text-base text-[#121212] opacity-60">Professional employees
+                                    <h3 class="text-[#121212] font-bold text-[20px] lg:text-2xl">The Benefits Only</h3>
+                                    <div class="divider ml-[calc(50%-48px)] md:ml-[50%] lg:ml-auto my-0 w-24"></div>
+                                    <p class="font-medium text-[14px] md:text-base text-[#121212] opacity-60">
+                                        Professional employees
                                         are there for you to pick
                                         the most amazing and fresh
                                         fruits.</p>
@@ -691,12 +699,12 @@
                     class="inline-block mr-3 w-10 md:w-7 lg:w-auto" src="./images/logo.png" alt="logo">Fruit
                 Burst</a>
             <div class="grid grid-cols-3 md:grid-cols-6 gap-4 mt-5">
-                <a class="link link-hover text-lg text-white">Home</a>
-                <a class="link link-hover text-lg text-white">About Us</a>
-                <a class="link link-hover text-lg text-white">Shop</a>
-                <a class="link link-hover text-lg text-white">All Fruits</a>
-                <a class="link link-hover text-lg text-white">Support</a>
-                <a class="link link-hover text-lg text-white">My Account</a>
+                <a class="link link-hover text-base lg:text-lg text-white">Home</a>
+                <a class="link link-hover text-base lg:text-lg text-white">About Us</a>
+                <a class="link link-hover text-base lg:text-lg text-white">Shop</a>
+                <a class="link link-hover text-base lg:text-lg text-white">All Fruits</a>
+                <a class="link link-hover text-base lg:text-lg text-white">Support</a>
+                <a class="link link-hover text-base lg:text-lg text-white">My Account</a>
             </div>
         </div>
         <div>
