some alignment change in timer

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             classical
                             Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
-                    <div class="deals-content-right flex-1 pr-10">
+                    <div class="deals-content-right flex-1 md:pr-10">
                         <div class="grid grid-flow-col justify-end gap-3 md:gap-5 text-center auto-cols-max">
                             <div class="flex flex-col justify-center items-center">
                                 <span class="countdown font-mono text-3xl lg:text-5xl font-extrabold">
@@ -219,7 +219,7 @@
                                     class="countdown font-mono text-3xl lg:text-5xl font-extrabold before:mr-2 md:before:mr-4 before:content-[url('./images/frame.png')]">
                                     <span style="--value:15;"></span>
                                 </span>
-                                <span class="ml-8 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Hours</span>
+                                <span class="ml-7 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Hours</span>
                             </div>
                             <div class="flex flex-col">
                                 <span
@@ -227,7 +227,7 @@
                                     <span style="--value:25;"></span>
                                 </span>
                                 <span
-                                    class="ml-8 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Minutes</span>
+                                    class="ml-7 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Minutes</span>
                             </div>
                             <div class="flex flex-col">
                                 <span
@@ -235,7 +235,7 @@
                                     <span style="--value:08;"></span>
                                 </span>
                                 <span
-                                    class="ml-8 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Seconds</span>
+                                    class="ml-7 lg:ml-11 text-base text-[#121212] opacity-60 font-medium">Seconds</span>
                             </div>
                         </div>
                     </div>
