change padding in why choose us part

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         </section><!-- team end -->
 
         <!-- why choose us start -->
-        <section class="why-choose-us py-24 px-12 md:px-0">
+        <section class="why-choose-us py-10 lg:py-24 px-12 md:px-0">
             <div class="container mx-auto">
                 <div class="row">
                     <div class="section-title text-center">
