--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                             </div>
                         </div>
 
-                        <div class="choose-content-center order-3 lg:order-2">
+                        <div class="choose-content-center order-1 md:order-3 lg:order-2">
                             <img src="./images/whychoose1.png" alt="why choose">
                         </div>
 
